# ulens_lsst

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.ipynb_checkpoints/: .readthedocs-checkpoint.yml  LICENSE-checkpoint  README-checkpoint.md  requirements-checkpoint.txt  setup-checkpoint.py
data/chunks_TRILEGAL_GENULENS/: Genulens_chunk_1.csv  Genulens_chunk_10.csv  Genulens_chunk_11.csv  Genulens_chunk_12.csv  Genulens_chunk_13.csv  Genulens_chunk_14.csv  Genulens_chunk_15.csv  Genulens_chunk_16.csv  Genulens_chunk_17.csv  Genulens_chunk_18.csv  Genulens_chunk_19.csv  Genulens_chunk_2.csv  Genulens_chunk_20.csv  Genulens_chunk_3.csv  Genulens_chunk_4.csv  Genulens_chunk_5.csv  Genulens_chunk_6.csv  Genulens_chunk_7.csv  Genulens_chunk_8.csv  Genulens_chunk_9.csv  TRILEGAL_chunk_1.csv  TRILEGAL_chunk_10.csv  TRILEGAL_chunk_11.csv  TRILEGAL_chunk_12.csv  TRILEGAL_chunk_13.csv  TRILEGAL_chunk_14.csv  TRILEGAL_chunk_15.csv  TRILEGAL_chunk_16.csv  TRILEGAL_chunk_17.csv  TRILEGAL_chunk_18.csv  TRILEGAL_chunk_19.csv  TRILEGAL_chunk_2.csv  TRILEGAL_chunk_20.csv  TRILEGAL_chunk_3.csv  TRILEGAL_chunk_4.csv  (+5 more)
docs/: Makefile  conf.py  data.rst  installation.rst  requirements.txt  tutorials.rst
tests/: __init__.py
ulens_lsst/: __init__.py  analysis.py  catalogs_utils.py  config_file.yaml  light_curves.py  lsst_tools.py  parallel_utils.py  processing_event_pipelines.py  region_sky.py  run_pipeline.py  simulation_pipeline.py  ulens_utils.py  utils.py
ulens_lsst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+49 files in other folders)
